Worked on UserPreferencesDialog
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1429 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/dialogs/ChangePasswordDialog.mxml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/dialogs/ChangePasswordDialog.mxml
@@ -25,7 +25,7 @@
 
     <mx:Metadata>
         [Name]
-        [ManagedEvent(name="CHANGE_USER_PASSWORD")]
+        [ManagedEvent(name = "CHANGE_USER_PASSWORD")]
         [ResourceBundle("appMain")]
     </mx:Metadata>
 
@@ -33,12 +33,13 @@
     	<![CDATA[
     		import mx.managers.PopUpManager;
     		import mx.controls.Alert;
+            
     		import org.openwms.web.flex.client.event.UserEvent;
     		import org.openwms.web.flex.client.model.ModelLocator;
     		import org.openwms.core.domain.system.usermanagement.User;
             import org.openwms.web.flex.client.util.I18nUtil;
     		
-    		[In]
+    		[Inject]
             [Bindable]
             /**
              * Injected Model.
