Minor changes, removed unused classes
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1433 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/HeaderComponent.mxml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/HeaderComponent.mxml
@@ -46,7 +46,7 @@
             import org.openwms.web.flex.client.util.I18nUtil;
             import org.openwms.web.flex.client.view.dialogs.UserPreferencesDialog;
 
-            [In]
+            [Inject]
             [Bindable]
             /**
              * Injected Granite identity object.
