--- a/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/CommonApp.mxml
+++ b/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/CommonApp.mxml
@@ -23,11 +23,15 @@
 -->
 <view:CommonAppBase xmlns:mx="http://www.adobe.com/2006/mxml" xmlns:view="org.openwms.web.flex.client.common.view.*">
     
+    <mx:Metadata>
+        [ResourceBundle("commonMain")]
+    </mx:Metadata>
+    
     <mx:Script>
     	<![CDATA[
     		import org.openwms.web.flex.client.util.DisplayUtility;
-    		import org.openwms.web.flex.client.event.SwitchScreenEvent;
     		import org.openwms.web.flex.client.common.event.CommonSwitchScreenEvent;
+            import org.openwms.web.flex.client.common.util.I18nUtil;
        	]]>
     </mx:Script>
 
@@ -35,23 +39,23 @@
         <mx:Canvas width="100%" height="25"  backgroundSize="100%">
             <mx:MenuBar id="commonMenuBar" labelField="@label">
                 <mx:XMLList>
-                    <menuitem label="Configuration">
-                        <menuitem label="Transport Unit Types" enabled="{identity.ifAllGranted('COMMON_Transport_Unit_Types')}" action="{CommonSwitchScreenEvent.SHOW_TRANSPORTUNITTYPE_VIEW}" />
-                        <menuitem label="Transport Units" enabled="{identity.ifAllGranted('COMMON_Transport_Units')}" action="{CommonSwitchScreenEvent.SHOW_TRANSPORTUNIT_VIEW}" />
-                        <menuitem label="Location Types" enabled="{identity.ifAllGranted('COMMON_Location_Types')}" action="{CommonSwitchScreenEvent.SHOW_LOCATIONTYPE_VIEW}" />
-                        <menuitem label="Locations" enabled="{identity.ifAllGranted('COMMON_Locations')}" action="{CommonSwitchScreenEvent.SHOW_LOCATION_VIEW}" />
-                        <menuitem label="Location Groups" enabled="{identity.ifAllGranted('COMMON_Location_Groups')}" action="{CommonSwitchScreenEvent.SHOW_LOCATIONGROUP_VIEW}" />
+                    <menuitem label="{I18nUtil.trans(I18nUtil.COMMON_MAIN, 'menu_common_configuration')}">
+                        <menuitem label="{I18nUtil.trans(I18nUtil.COMMON_MAIN, 'menu_common_transportUnitTypes')}" enabled="{identity.ifAllGranted('COMMON_Transport_Unit_Types')}" action="{CommonSwitchScreenEvent.SHOW_TRANSPORTUNITTYPE_VIEW}" />
+                        <menuitem label="{I18nUtil.trans(I18nUtil.COMMON_MAIN, 'menu_common_transportUnits')}" enabled="{identity.ifAllGranted('COMMON_Transport_Units')}" action="{CommonSwitchScreenEvent.SHOW_TRANSPORTUNIT_VIEW}" />
+                        <menuitem label="{I18nUtil.trans(I18nUtil.COMMON_MAIN, 'menu_common_locationTypes')}" enabled="{identity.ifAllGranted('COMMON_Location_Types')}" action="{CommonSwitchScreenEvent.SHOW_LOCATIONTYPE_VIEW}" />
+                        <menuitem label="{I18nUtil.trans(I18nUtil.COMMON_MAIN, 'menu_common_locations')}" enabled="{identity.ifAllGranted('COMMON_Locations')}" action="{CommonSwitchScreenEvent.SHOW_LOCATION_VIEW}" />
+                        <menuitem label="{I18nUtil.trans(I18nUtil.COMMON_MAIN, 'menu_common_locationGroups')}" enabled="{identity.ifAllGranted('COMMON_Location_Groups')}" action="{CommonSwitchScreenEvent.SHOW_LOCATIONGROUP_VIEW}" />
                     </menuitem>
                 </mx:XMLList>
             </mx:MenuBar>
         </mx:Canvas>
         <mx:HBox width="100%" height="100%" horizontalAlign="center" verticalAlign="middle">
             <mx:ViewStack id="commonViewStack" selectedIndex="{DisplayUtility.getView(modelLocator.actualView, commonViewStack)}">
-                <view:LocationView name="locationView" />
-                <view:LocationTypeView name="locationTypeView" />
-                <view:LocationGroupView name="locationGroupView" />
-                <view:TransportUnitView name="transportUnitView" />
-                <view:TransportUnitTypeView name="transportUnitTypeView" />
+                <view:LocationView name="{CommonSwitchScreenEvent.SHOW_LOCATION_VIEW}" />
+                <view:LocationTypeView name="{CommonSwitchScreenEvent.SHOW_LOCATIONTYPE_VIEW}" />
+                <view:LocationGroupView name="{CommonSwitchScreenEvent.SHOW_LOCATIONGROUP_VIEW}" />
+                <view:TransportUnitView name="{CommonSwitchScreenEvent.SHOW_TRANSPORTUNIT_VIEW}" />
+                <view:TransportUnitTypeView name="{CommonSwitchScreenEvent.SHOW_TRANSPORTUNITTYPE_VIEW}" />
             </mx:ViewStack>
         </mx:HBox>
     </mx:VBox>
